# Sonetto

./: .gitignore  README.md  pyproject.toml  relay.py  used_id.txt
frontend/src/app/: page.tsx
frontend/src/app/api/[customer_id]/: route.ts
frontend/src/app/components/: CustomerDashboard.tsx
frontend/src/app/customers/[customer_id]/: page.tsx
known_faces/: face_encodings.json
src/: audio.m4a  diarizer.py  groq_api_example.py  openai_api_example.py  register_face_example.py  relay.py  utils.py
src/audio_processing/: analyze_audio.py  preprocess.py
src/memory_module/: db.py  db_man.py  recommender.py  summarize.py  user_identification.py
src/voice_id/: diarizer.py  recognizer.py
